# sonitus

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-android.yml  release-desktop.yml  release-ios.yml  release-web.yml
assets/: .gitkeep
assets/fonts/: .gitkeep
assets/icons/: .gitkeep
assets/styles/: app.css
crates/sonitus-core/: Cargo.toml
crates/sonitus-core/benches/: crypto_bench.rs  scanner_bench.rs
crates/sonitus-core/src/: config.rs  error.rs  lib.rs
crates/sonitus-core/src/crypto/: field.rs  kdf.rs  mod.rs  types.rs  vault.rs
crates/sonitus-core/src/download/: cache.rs  manager.rs  mod.rs
crates/sonitus-core/src/metadata/: acoustid.rs  cover_art.rs  mod.rs  musicbrainz.rs  probe.rs  tags.rs
crates/sonitus-core/src/player/: commands.rs  decode.rs  engine.rs  events.rs  gapless.rs  mod.rs  output_native.rs  output_web.rs  queue.rs  replaygain.rs
crates/sonitus-core/src/playlist/: manager.rs  mod.rs  smart.rs
crates/sonitus-core/src/privacy/: audit.rs  consent.rs  middleware.rs  mod.rs  redact.rs
crates/sonitus-core/src/sources/: dropbox.rs  google_drive.rs  http.rs  local.rs  mod.rs  oauth_callback.rs  onedrive.rs  s3.rs  smb.rs
crates/sonitus-core/tests/: test_audio_ring.rs  test_audit_middleware.rs  test_consent_gate.rs  test_crypto_round_trip.rs  test_library_db.rs  test_local_source.rs  test_oauth_callback.rs  test_playlist_export.rs  test_scanner_e2e.rs  test_smart_playlist.rs
crates/sonitus-meta/: Cargo.toml
crates/sonitus-meta/src/: lib.rs  migrate.rs  reader.rs  schema.rs  validator.rs  writer.rs
crates/sonitus-meta/tests/: test_round_trip.rs
crates/sonitus-ui/: Cargo.toml
crates/sonitus-ui/assets/styles/: app.css
crates/sonitus-ui/src/: app.rs  main.rs  orchestrator.rs  routes.rs
crates/sonitus-ui/src/components/: mod.rs
crates/sonitus-ui/src/components/downloads/: download_button.rs  downloads_list.rs  mod.rs
crates/sonitus-ui/src/components/layout/: app_shell.rs  bottom_nav.rs  mod.rs  now_playing_bar.rs  sidebar.rs  topbar.rs
crates/sonitus-ui/src/components/player/: controls.rs  mini_player.rs  mod.rs  now_playing_full.rs  queue_panel.rs  seekbar.rs  volume_control.rs
crates/sonitus-ui/src/components/playlists/: add_to_playlist_dialog.rs  mod.rs  new_playlist_dialog.rs  playlist_card.rs  playlist_detail.rs  playlist_editor.rs  playlists_list.rs  smart_playlist_editor.rs
crates/sonitus-ui/src/components/privacy/: audit_log_viewer.rs  consent_manager.rs  data_export.rs  mod.rs  privacy_dashboard.rs
crates/sonitus-ui/src/components/search/: mod.rs  search_bar.rs  search_results.rs
crates/sonitus-ui/src/components/settings/: about_page.rs  appearance_settings.rs  audio_settings.rs  mod.rs  settings_root.rs  storage_settings.rs
crates/sonitus-ui/src/components/sources/: add_source_wizard.rs  mod.rs  oauth_flow.rs  scan_progress.rs  source_detail.rs  sources_list.rs
crates/sonitus-ui/src/hooks/: mod.rs  use_downloads.rs  use_keyboard.rs  use_library.rs  use_player.rs  use_search.rs
crates/sonitus-ui/src/platform/: desktop.rs  mobile.rs  mod.rs  web.rs
crates/sonitus-ui/src/state/: download_state.rs  library_state.rs  mod.rs  player_state.rs  search_state.rs  settings_state.rs
migrations/: 001_initial_schema.sql  002_playlists.sql  003_fts5_search.sql  004_downloads.sql  005_audit_log.sql
scripts/: README.md  build-release.ps1  run-dev.cmd  run-dev.ps1
