[package]
name          = "sonitus-meta"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Sonitus user-owned `.sonitus` library metadata file format (TOML)."

[dependencies]
serde               = { workspace = true }
toml                = { workspace = true }
chrono              = { workspace = true }
uuid                = { workspace = true }
thiserror           = { workspace = true }
tempfile            = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
tokio-test          = { workspace = true }
tempfile            = { workspace = true }
proptest            = { workspace = true }
