[package]
name          = "sonitus-ui"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Sonitus UI — Dioxus 0.7 cross-platform interface."

[[bin]]
name = "sonitus"
path = "src/main.rs"

[features]
default = ["desktop", "s3"]
desktop = ["dep:dioxus-desktop"]
web     = ["dep:dioxus-web"]
mobile  = ["dep:dioxus-mobile"]
# Forward source-provider features to sonitus-core so orchestrator
# `#[cfg(feature = "s3")]` etc. resolve in this crate too.
s3      = ["sonitus-core/s3"]
smb     = ["sonitus-core/smb"]

[dependencies]
sonitus-core        = { workspace = true }
sonitus-meta        = { workspace = true }

# Dioxus
dioxus              = { workspace = true }
dioxus-desktop      = { workspace = true, optional = true }
dioxus-web          = { workspace = true, optional = true }
dioxus-mobile       = { workspace = true, optional = true }
dioxus-sdk          = { workspace = true }

# Async / runtime — UI runs on tokio for non-realtime work
tokio               = { workspace = true }
async-trait         = { workspace = true }
futures             = { workspace = true }

# Serialization (settings persistence)
serde               = { workspace = true }
serde_json          = { workspace = true }
toml                = { workspace = true }

# Errors / logging
anyhow              = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

# Utils
uuid                = { workspace = true }
chrono              = { workspace = true }
url                 = { workspace = true }
strum               = { workspace = true }
parking_lot         = { workspace = true }
once_cell           = { workspace = true }
dirs                = { workspace = true }
crossbeam-channel   = { workspace = true }

[dev-dependencies]
tokio-test          = { workspace = true }
